k8s/domains/documents/components/ui/infra/overlays/ephemeral/documents-ui-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: documents-ui-depl
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: documents-ui
